# Fusion-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
include/: application.hpp  buffer.hpp  buffer.inl  camera.hpp  mesh.hpp  scene.hpp  shader.hpp  shader.inl  vertex.hpp
src/: application.cpp  buffer.cpp  camera.cpp  main.cpp  mesh.cpp  scene.cpp  shader.cpp  vertex.cpp
